src/tests/snapshots/nyx__tests__window_opening__check_fullscreen_maximize@fsT-tmF-wfsBN-wmAU.snap
---
source: src/tests/window_opening.rs
assertion_line: 889
description: "want fullscreen: BN\nwant maximized: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized-to-edges false\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
